--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "mongoose": "6.0.14"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
@@ -17,6 +18,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jest": "25.3.0",
     "jest": "27.4.0",
+    "node-mocks-http": "1.11.0",
     "prettier": "2.5.0",
     "ts-jest": "27.0.7",
     "ts-node-dev": "1.1.8",
