--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.17.1",
-    "mongoose": "6.0.14"
+    "mongoose": "6.0.14",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/jest": "27.0.3",
+    "@types/morgan": "1.9.3",
+    "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
     "eslint": "8.3.0",
@@ -20,12 +23,13 @@
     "jest": "27.4.0",
     "node-mocks-http": "1.11.0",
     "prettier": "2.5.0",
+    "supertest": "6.1.6",
     "ts-jest": "27.0.7",
     "ts-node-dev": "1.1.8",
     "typescript": "4.5.2"
   },
   "scripts": {
-    "dev": "ts-node-dev ./src/app.ts",
+    "dev": "ts-node-dev ./src/server.ts",
     "test": "jest --watchAll",
     "lint": "eslint --ext .js,.ts src/"
   }
