--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.13",
+    "@types/faker": "5.5.9",
     "@types/jest": "27.0.3",
     "@types/morgan": "1.9.3",
     "@types/supertest": "2.0.11",
@@ -20,6 +21,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jest": "25.3.0",
+    "faker": "5.5.3",
     "jest": "27.4.0",
     "node-mocks-http": "1.11.0",
     "prettier": "2.5.0",
@@ -30,7 +32,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev ./src/server.ts",
-    "test": "jest --watchAll --no-cache --verbose=true --runInBand --detectOpenHandles --forceExit",
+    "test": "jest --watchAll --coverage --no-cache --verbose=true --runInBand --detectOpenHandles --forceExit",
     "lint": "eslint --ext .js,.ts src/"
   }
 }
