--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "mongoose": "6.0.14",
     "morgan": "1.10.0"
   },
   "devDependencies": {
+    "@types/dotenv": "8.2.0",
     "@types/express": "4.17.13",
     "@types/faker": "5.5.9",
     "@types/jest": "27.0.3",
